hw06/test/whileExp-continueInCondition.fmj
public int main(){
    int r= 1;
    while(({r=2; putnum(r); continue;} r)){ // error

    }
    return 1;
}